// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Ratio Prop - ratio items: square 1`] = `
<div class="e-bolt-ratio e-bolt-ratio--square">
  This is a ratio
</div>
`;

exports[`Bolt Ratio Prop - ratio items: standard 1`] = `
<div class="e-bolt-ratio">
  This is a ratio
</div>
`;

exports[`Bolt Ratio Prop - ratio items: wide 1`] = `
<div class="e-bolt-ratio e-bolt-ratio--wide">
  This is a ratio
</div>
`;

exports[`Bolt Ratio default 1`] = `
<div class="e-bolt-ratio">
  This is a ratio
</div>
`;
